// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayResultsBar should render a results bar with filter labels 1`] = `
<nav class="tbar tbar-inline-xs-down subnav-tbar subnav-tbar-primary">
  <div class="container-fluid container-fluid-max-xl">
    <ul class="tbar-nav tbar-nav-wrap">
      <li class="tbar-item">
        <div class="tbar-section">
          <span class="component-text text-truncate-inline">
            <span class="text-truncate">10-results-for</span>
          </span>
        </div>
      </li>
      <li class="tbar-item">
        <div class="tbar-section">
          <div data-labelid="0">
            <span class="label component-label tbar-label">
              <span class="label-item label-item-expand">
                <div class="label-section">Label 1</div>
              </span>
            </span>
          </div>
        </div>
      </li>
      <li class="tbar-item">
        <div class="tbar-section">
          <div data-labelid="1">
            <span class="label label-dismissible component-label tbar-label">
              <span class="label-item label-item-expand">
                <div class="label-section">Label 2</div>
              </span>
              <span class="label-item label-item-after">
                <button class="btn close" aria-label="close" type="button">
                  <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                    <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#times"></use>
                  </svg>
                </button>
              </span>
            </span>
          </div>
        </div>
      </li>
      <li class="tbar-item tbar-item-expand">
        <div class="tbar-section">
          <div data-labelid="2">
            <span class="label label-dismissible component-label tbar-label">
              <span class="label-item label-item-expand">
                <div class="label-section">
                  <strong>Category:</strong>Label 3</div>
              </span>
              <span class="label-item label-item-after">
                <button class="btn close" aria-label="close" type="button">
                  <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                    <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#times"></use>
                  </svg>
                </button>
              </span>
            </span>
          </div>
        </div>
      </li>
      <li class="tbar-item">
        <div class="tbar-section">
          <button class="btn component-link tbar-link btn-unstyled" type="button">clear</button>
        </div>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayResultsBar should render a results bar with filter labels and search value 1`] = `
<nav class="tbar tbar-inline-xs-down subnav-tbar subnav-tbar-primary">
  <div class="container-fluid container-fluid-max-xl">
    <ul class="tbar-nav tbar-nav-wrap">
      <li class="tbar-item">
        <div class="tbar-section">
          <span class="component-text text-truncate-inline">
            <span class="text-truncate">10-results-for-my search</span>
          </span>
        </div>
      </li>
      <li class="tbar-item">
        <div class="tbar-section">
          <div data-labelid="0">
            <span class="label component-label tbar-label">
              <span class="label-item label-item-expand">
                <div class="label-section">Label 1</div>
              </span>
            </span>
          </div>
        </div>
      </li>
      <li class="tbar-item">
        <div class="tbar-section">
          <div data-labelid="1">
            <span class="label label-dismissible component-label tbar-label">
              <span class="label-item label-item-expand">
                <div class="label-section">Label 2</div>
              </span>
              <span class="label-item label-item-after">
                <button class="btn close" aria-label="close" type="button">
                  <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                    <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#times"></use>
                  </svg>
                </button>
              </span>
            </span>
          </div>
        </div>
      </li>
      <li class="tbar-item tbar-item-expand">
        <div class="tbar-section">
          <div data-labelid="2">
            <span class="label label-dismissible component-label tbar-label">
              <span class="label-item label-item-expand">
                <div class="label-section">
                  <strong>Category:</strong>Label 3</div>
              </span>
              <span class="label-item label-item-after">
                <button class="btn close" aria-label="close" type="button">
                  <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                    <use xlink:href="../node_modules/clay-css/lib/images/icons/icons.svg#times"></use>
                  </svg>
                </button>
              </span>
            </span>
          </div>
        </div>
      </li>
      <li class="tbar-item">
        <div class="tbar-section">
          <button class="btn component-link tbar-link btn-unstyled" type="button">clear</button>
        </div>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayResultsBar should render a results bar with search value 1`] = `
<nav class="tbar tbar-inline-xs-down subnav-tbar subnav-tbar-primary">
  <div class="container-fluid container-fluid-max-xl">
    <ul class="tbar-nav tbar-nav-wrap">
      <li class="tbar-item tbar-item-expand">
        <div class="tbar-section">
          <span class="component-text text-truncate-inline">
            <span class="text-truncate">10-results-for-my search</span>
          </span>
        </div>
      </li>
      <li class="tbar-item">
        <div class="tbar-section">
          <button class="btn component-link tbar-link btn-unstyled" type="button">clear</button>
        </div>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`ClayResultsBar should render the default markup 1`] = `
<nav class="tbar tbar-inline-xs-down subnav-tbar subnav-tbar-primary">
  <div class="container-fluid container-fluid-max-xl">
    <ul class="tbar-nav tbar-nav-wrap">
      <li class="tbar-item tbar-item-expand">
        <div class="tbar-section">
          <span class="component-text text-truncate-inline">
            <span class="text-truncate">10-results-for</span>
          </span>
        </div>
      </li>
      <li class="tbar-item">
        <div class="tbar-section">
          <button class="btn component-link tbar-link btn-unstyled" type="button">clear</button>
        </div>
      </li>
    </ul>
  </div>
</nav>
`;
